jhsdb does not work with coredump which comes from Substrate VM

XMLWordPrintable

    • b09
    • linux

        I played Truffle NFI on GraalVM, but I cannot get Java stacks from coredump via jhsdb.

        I've reported this issue to GraalVM community [1], and I 've found out the cause of this issue is .svm_heap would be separated to RO and RW areas by mprotect() calls in run time in spite of .svm_heap is RO section in ELF (please see [1] for details).

        It is corner case, but we will see same problem on jhsdb when we attempt to analyze coredump which comes from some applications / libraries which would separate RO sections in ELF like Substrate VM.

        I sent PR to fix libsaproc.so in LabsJDK 11 for this issue [2], then community members suggested me to discuss in serviceability-dev.


        [1] https://github.com/oracle/graal/issues/2579
        [2] https://github.com/graalvm/labs-openjdk-11/pull/9

              Assignee:
              Yasumasa Suenaga
              Reporter:
              Yasumasa Suenaga
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: