8250826: jhsdb does not work with coredump which comes from Substrate VM

Reviewed-by: cjplummer, sspitsyn